# Conversaciones

./: .gitignore  README.md
agent/: agent.py  conversation_log.py  demo_tools.py  note_generator.py  personalities.py  pyproject.toml  session_manager.py  summary_generator.py  therapy_tools.py
docs/: arquitectura.md  cotizacion-aseguradora.md  demo-seguros.md  deployment.md  guia-administrador.md  guia-usuario.md  plan-cifrado-notas.md  plan.md  seguridad.md
frontend/: .env.example  app-config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/[personality]/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/conversations/: route.ts
frontend/app/api/invite/: route.ts
frontend/app/api/metrics/: route.ts
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/components/agents-ui/: agent-control-bar.tsx  agent-disconnect-button.tsx  agent-volume-control.tsx
frontend/components/app/: app.tsx  conversation-log-view.tsx  markdown-editor.tsx  notes-view.tsx  settings-view.tsx  theme-toggle.tsx  transcribe-view.tsx  view-controller.tsx  welcome-view.tsx
frontend/hooks/agents-ui/: use-agent-volume.ts
frontend/lib/: auth.ts  data-paths.ts  email-templates.ts  email.ts  password-resets.ts  personalities-config.ts  rate-limit.ts  settings.ts  users.ts
frontend/styles/: globals.css
frontend/types/: next-auth.d.ts
scripts/: bump-version.sh  migrate-to-multiuser.sh
(+26 files in other folders)
